[workspace]
members = [
    # 
    "serverless_functions",
    "shared",
    "assets/mod",
    "assets/build_browser",
    "assets/build_tailwind",
    "assets/build_images",
    "assets/build_images_runtime",
    "assets/build_images_macro",
    "assets/parse_macro_arguments",
]
exclude = [
    # If we add the browser crate to the workspace, building causes
    # a deadlock. This is because:
    #
    # We kick off cargo build. The cargo process for the workspace
    # gets file locks for the browser crate.
    #
    # We start another cargo process in the build script for the build_browser crate.
    # This cargo process can't complete because the workspace cargo process already
    # has the file locks for the browser crate.
    #
    # But the workspace cargo process also can't complete because it's waiting on
    # build_browser's build script to complete.
    "browser",
]
resolver = "2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Turn on link time optimizations for faster code.
lto = true
# This speeds up the resulting code, but takes longer to compile.
codegen-units = 1

# For cargo-commander.
[commands]
dev = "./scripts dev"
build = "./scripts build"
preview = "./scripts preview"
deploy = "./scripts deploy"
profile_bundle_size = "./scripts profile_bundle_size"
setup = "chmod +x ./scripts && ./scripts setup"
