[package]
name = "assets"
version = "0.1.0"
edition = "2021"
description = "Assets processing."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[features]
build = ["image", "rayon"]

[dependencies]
image = { version = "0.24.6", features = ["webp-encoder"], optional = true }
once_cell = "1.18.0"
serde = "1.0.174"
serde_json = "1.0.103"
minify-html = "0.11.1"
minify-js = "0.5.6"
rayon = { version = "1.7.0", optional = true }
tree_magic = "0.2.3"
base64 = { version = "0.21.2" }
struct_iterable = "0.1.1"
arraygen = "0.3.2"
maud = "0.25.0"

[build-dependencies]
