[package]
name = "build_browser"
version = "0.1.0"
edition = "2021"
description = ""
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[lib]
proc-macro = true

[dependencies]
minify-js = { version = "0.5.6" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
