[package]
name = "html_generator"
version = "0.1.0"
edition = "2021"
description = "The server for this project, used during development and for building the site."
license = "unlicensed"
repository = "https://github.com/photon-garden/santoka/"

[dependencies]
shared = { path = "../shared", features = ["server"] }
color-eyre = "0.6.2"
dioxus = "0.4.0"
dioxus-ssr = "0.4.0"
image = { version = "0.24.6", features = ["webp-encoder"] }
once_cell = "1.18.0"
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
ts-rs = "6.2.1"
minify-html = "0.11.1"
minify-js = "0.5.6"
rayon = "1.7.0"
tree_magic = "0.2.3"
base64 = { version = "0.21.2" }
chrono = "0.4.26"

[build-dependencies]
