[package]
name = "html_generator_hack"
version = "0.1.0"
edition = "2021"
description = "The server for this project, used during development and for building the site."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[dependencies]
shared = { path = "../shared", features = ["server"] }
dioxus = "0.4.0"
dioxus-ssr = { version = "0.4.0" }
dioxus-router = { version = "^0.4.1", default-features = false, features = [
    "ssr",
] }

[build-dependencies]
