[package]
name = "new_assets"
version = "0.1.0"
edition = "2021"
description = "Assets processing."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[features]
build = ["minify-js"]

[dependencies]
minify-js = { version = "0.5.6", optional = true }

# # Always build the image crate with optimizations enabled, even in debug mode.
# [profile.dev.package.image]
# opt-level = 3
