[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Serverless functions for this project for handling back end logic."
license = "unlicensed"
repository = "https://github.com/rainsound-ai/rainsound.ai/"

[dependencies]
shared = { path = "../shared", features = ["server"] }
assets = { path = "../assets/mod" }
maud = "0.25.0"
anyhow = "1.0.75"
build-time = "0.1.3"
once_cell = "1.18.0"
chrono = "0.4.31"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
