[package]
name = "serverless_functions"
version = "0.1.0"
edition = "2021"
description = "Serverless functions for this project for handling back end logic."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared", features = ["server"] }
assets = { path = "../assets/mod" }
maud = "0.25.0"
http = "0.2"                                                           # General-purpose crate with common HTTP types.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" } # The Spin SDK.
anyhow = "1.0.75"
build-time = "0.1.3"

[build-dependencies]
assets = { path = "../assets/mod", features = ["build"] }
