[package]
name = "serverless_functions_test"
version = "0.1.0"
edition = "2021"
description = "Serverless functions for this project for handling back end logic."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "^0.0.18"
wasm-bindgen = "^0.2.86"
wasm-bindgen-futures = { version = "0.4.36" }
