# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Code shared between browser and server."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"


[features]
browser = ["wasm-bindgen", "web-sys", "gloo", "serde"]
server = ["serde"]

[dependencies]
wasm-bindgen = { version = "^0.2.86", optional = true }
gloo = { version = "0.9.0", optional = true, features = ["futures", "events"] }
serde = { version = "1.0.183", optional = true }
web-sys = { version = "0.3.4", optional = true, features = [
    "Document",
    "Element",
    "Headers",
    "HtmlElement",
    "CssStyleDeclaration",
    "Node",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "DomTokenList",
] }
