[package]
name = "build_images_macro"
version = "0.1.0"
edition = "2021"
description = ""
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
image = { version = "0.24.7" }
base64 = { version = "0.21.4" }
walkdir = "2.4.0"
mime = "0.3.17"
rayon = "1.8.0"
build_images_runtime = { path = "../build_images_runtime" }
prettyplease = "0.2.15"

# Always build the image crate with optimizations enabled, even in dev, test, and benchmark mode.
[profile.dev.package.image]
opt-level = 3
[profile.test.package.image]
opt-level = 3
[profile.bench.package.image]
opt-level = 3
