[package]
name = "assets_macro"
version = "0.1.0"
edition = "2021"
description = ""
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[lib]
proc-macro = true

[dependencies]
assets_runtime = { path = "../runtime", features = ["build_time"] }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
rayon = "1.8.0"
log = "0.4.20"
simple_logger = { version = "4.2.0", default_features = false, features = [
    "stderr",
    "colors",
] }
