[package]
name = "assets"
version = "0.1.0"
edition = "2021"
description = "Assets processing."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[features]
default = []
build = ["image", "base64"]

[dependencies]
arraygen = "0.3.2"
once_cell = "1.18.0"
image = { version = "0.24.7", optional = true }
rayon = "1.8.0"
base64 = { version = "0.21.4", optional = true }
cfg-if = "1.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
build_tailwind = { path = "../build_tailwind" }
build_browser = { path = "../build_browser" }
build_images = { path = "../build_images" }
build_images_macro = { path = "../build_images_macro" }
mime_guess = "2.0.4"

# # Always build the image crate with optimizations enabled, even in debug mode.
# [profile.dev.package.image]
# opt-level = 3

[dev-dependencies]
toml = "0.8.6"
