[package]
name = "build_images"
version = "0.1.0"
edition = "2021"
description = ""
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
build_images_runtime = { path = "../build_images_runtime" }
build_images_macro = { path = "../build_images_macro" }
