[package]
name = "assets_runtime"
version = "0.1.0"
edition = "2021"
description = "Assets processing."
license = "unlicensed"
repository = "https://github.com/hyperbloom-ai/creative-computing-website/"

[dependencies]
arraygen = "0.3.2"
once_cell = "1.18.0"
rayon = "1.8.0"
cfg-if = "1.0.0"
build_tailwind = { path = "../build_tailwind" }
build_browser = { path = "../build_browser" }
build_images = { path = "../build_images" }
build_images_macro = { path = "../build_images_macro" }
log = "0.4.20"

[dev-dependencies]
# For parsing spin.toml in tests.
toml = "0.8.6"
